checkpatch-results/home/fedora/lkml-analysis/lkml/0/0000088043.8e73d15569f5a0577a8fa73f87817b476f68864f
WARNING:COMMIT_LOG_LONG_LINE: Possible unwrapped commit description (prefer a maximum 75 chars per line)
#42: 
>   security/selinux/xfrm.c: In function â??selinux_socket_getpeer_dgramâ??:

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#42: 
>   security/selinux/xfrm.c: In function â??selinux_socket_getpeer_dgramâ??:
                                         ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#43: 
>   security/selinux/xfrm.c:284: error: â??struct sec_pathâ?? has no member named â??xâ??
                                        ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#44: 
>   security/selinux/xfrm.c: In function â??selinux_xfrm_sock_rcv_skbâ??:
                                         ^

CHECK:INVALID_UTF8: Invalid UTF-8, patch and commit message should be encoded in UTF-8
#45: 
>   security/selinux/xfrm.c:317: error: â??struct sec_pathâ?? has no member named â??xâ??
                                        ^

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000088043.commit.8e73d15569f5a0577a8fa73f87817b476f68864f total: 0 errors, 1 warnings, 4 checks, 16 lines checked

NOTE: For some of the reported defects, checkpatch may be able to
      mechanically convert to the typical style using --fix or --fix-inplace.

./tmp.EfiDkiSq0Q//home/fedora/lkml-analysis/lkml/0/patch.offset.0000088043.commit.8e73d15569f5a0577a8fa73f87817b476f68864f has style problems, please review.

NOTE: If any of the errors are false positives, please report
      them to the maintainer, see CHECKPATCH in MAINTAINERS.
